--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -19,13 +19,13 @@ jobs:
           java-version: '21'
           distribution: 'adopt'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+#      - name: Cache Maven packages
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.m2/repository
+#          key: '${{ runner.os }}-maven-${{ hashFiles("pom.xml") }}'
+#          restore-keys: |
+#            ${{ runner.os }}-maven-
 
       - name: Build project
         run: mvn clean install
