--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -19,16 +19,19 @@ jobs:
           java-version: '21'
           distribution: 'adopt'
 
-#      - name: Cache Maven packages
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.m2/repository
-#          key: '${{ runner.os }}-maven-${{ hashFiles("pom.xml") }}'
-#          restore-keys: |
-#            ${{ runner.os }}-maven-
+      - name: Clear Maven cache  # Доданий крок для очищення кешу Maven
+        run: rm -rf ~/.m2/repository
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: '${{ runner.os }}-maven-${{ hashFiles("pom.xml") }}'
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build project
-        run: mvn clean install
+        run: mvn clean install -e -X  # Додано для отримання детальнішої інформації про помилки
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
