--- a/.github/workflows/github-cicd.yml
+++ b/.github/workflows/github-cicd.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: "bethakzs"
-          password: "r1o2m3a4n5"
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t bethakzs/your_image_name:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/your_image_name:latest .
 
       - name: Push Docker image
-        run: docker push bethakzs/your_image_name:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/your_image_name:latest
