--- a/.github/workflows/github-cicd.yml
+++ b/.github/workflows/github-cicd.yml
@@ -30,8 +30,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-#      - name: Run Tests
-#        run: mvn test
+      - name: Set up JDK 22
+        uses: actions/setup-java@v4
+        with:
+          java-version: '22'
+          distribution: 'adopt'
+          cache: maven
+
+      - name: Run Tests
+        run: mvn test
 
   docker:
     runs-on: ubuntu-latest
