--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: springboot-k8s-svc
+  name: experimental-app-service
 spec:
   selector:
-    app: spring-boot-k8s
+    app: experimental-app
   ports:
-    - protocol: "TCP"
-      port: 8080
-      targetPort: 8080
+    - protocol: TCP
+      port: 80
+      targetPort: 80
   type: NodePort
