--- a/.github/workflows/github-cicd.yml
+++ b/.github/workflows/github-cicd.yml
@@ -60,17 +60,15 @@ jobs:
         run: docker push ${{ secrets.DOCKER_USERNAME }}/experimental:latest
 
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: docker
+
     steps:
       - name: Set up kubectl
-        uses: azure/setup-kubectl@v1
-        with:
-          version: 'latest'
+        run: |
+          sudo apt-get install -y kubectl
 
-      - name: Deploy to Minikube
-        env:
-          KUBECONFIG: ${{ secrets.KUBE_CONFIG }}
+      - name: Apply Kubernetes configurations
         run: |
           kubectl apply -f k8s-deployment.yaml
           kubectl apply -f k8s-service.yaml
