--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: experimental-app-service
+  name: springboot-k8s-svc
 spec:
   selector:
-    app: experimental-app
+    app: spring-boot-k8s
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8080
+      targetPort: 8080
   type: NodePort
