--- a/.github/workflows/github-cicd.yml
+++ b/.github/workflows/github-cicd.yml
@@ -76,6 +76,7 @@ jobs:
 
       - name: Apply Kubernetes configurations
         run: |
-          kubectl apply -f k8s-deployment.yaml
-          kubectl apply -f k8s-service.yaml
+          kubectl apply -f k8s-deployment.yaml --validate=false
+          kubectl apply -f k8s-service.yaml --validate=false
+
   
