--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-boot-k8s
+  name: my-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: spring-boot-k8s
+      app: my-app
   template:
     metadata:
       labels:
-        app: spring-boot-k8s
+        app: my-app
     spec:
       containers:
-        - name: spring-boot-k8s
-          image: bethakzs/experimental:latest
+        - name: my-app
+          image: my-app:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
